--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@ __pycache__/
 # C extensions
 *.so
 
+# Lilypond extensions
+*.ly
+
+# swap files
+*.swp
+
 # Distribution / packaging
 .Python
 env/
